# clinical-notes-extractor

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
src/: claude_client.py  extractor.py  fake_client.py  pipeline.py  schemas.py
tests/: test_extractors.py
