[project]
name = "clinical-notes"
version = "0.1.0"
description = ""
authors = [
    {name = "Anuja P"}
]
requires-python = ">=3.12"
dependencies = [
    "anthropic (>=0.116.0,<0.117.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fsspec (>=2026.6.0,<2027.0.0)",
    "huggingface-hub (>=1.23.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
target-version = ['py312']

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
